--- a/src/Views/layouts/partial/footer.twig
+++ b/src/Views/layouts/partial/footer.twig
@@ -20,6 +20,7 @@
                     <ul class="navigation-list">
                         <li><a href="/about" class="nav-link">Sobre Nós</a></li>
                         <li><a href="/courses" class="nav-link">Cursos</a></li>
+                        <li><a href="/events" class="nav-link">Eventos</a></li>
                     </ul>
                 </div>
 
